# demo_k8s

./: README.md  values.yaml
camunda-platform/: Chart.yaml  README.md  RELEASE-NOTES.md  values.yaml
cka/: deploy-nginx.yaml  np.yaml  pv-pod.yaml  static.yaml
coroot/base/: kustomization.yaml  values.yaml
keycloak/: README.md
keycloak/base/: kustomization.yaml  metallb-ipadress-pool.yaml  metallb-l2-advertisement.yaml  values_keycloak.yaml  values_mariadb.yaml  values_nginx.yaml
kustomize-longhorn/base/: kustomization.yaml  lb-service-sr3.yaml  lb-service-sr6.yaml  longhorn.yaml  metallb-ipadress-pool-sr3.yaml  metallb-ipadress-pool-sr6.yaml  metallb-l2-advertisement-sr3.yaml  metallb-l2-advertisement-sr6.yaml  values.yaml
mariadb/: database.yaml  mariadb.yaml  pvc.yaml  sqljob_01-users.yaml  sqljob_02-repos.yaml  sqljob_03-stars.yaml
mariadb/backup/: backup-new.yaml  backup.yaml  backup_s3-ad-hoc.yaml
mariadb/instance/: mariadb.yaml  mariadb_from_backup.yaml
mariadb/restore/: restore-new.yaml  restore-s3.yaml  restore.yaml
mariadb/secret/: s3.yaml
mariadb/temp-file/: grant.yaml  sqljob_01-users.yaml  sqljob_02-repos.yaml  sqljob_03-stars.yaml  sqljob_04-addusers.yaml  user.yaml
rust_learning/: main  main.rs
rust_learning/guesing/: Cargo.toml
rust_learning/rust-k8s-operator/: Cargo.toml  Dockerfile  deploy.sh
rust_learning/rust-k8s-operator/k8s/: crd.yaml  deployment.yaml  example-appmanager.yaml  rbac.yaml
rust_learning/rust-k8s-operator/src/: controller.rs  crd.rs  main.rs
trident-operator/base/: kustomization.yaml
(+136 files in other folders)
